Implementado info en LOGs
Implementada la información necesaria en LOGs tanto en el modelo de textos como en el de grupos de textos.

--- a/Translation/ca_ES.json
+++ b/Translation/ca_ES.json
@@ -1,6 +1,6 @@
 {
-"group-name": "Nom del Grup",
-"text-group": "Grup del Text",
-"text-name": "Nom del Text",
-"texts": "Textos"
+    "group-name": "Nom del Grup",
+    "text-group": "Grup del Text",
+    "text-groups": "Grups de Text",
+    "text-name": "Nom del Text"
 }
