Tarea #3464 - Cambiar canal de LOG
Cambiar el Canal de LOGs a uno genérico, ya que los del canal AUDIT no se pueden eliminar desde la aplicación. Se ha sustituido el nombre del canal LOG, de "audit" a "any_plg", en los modelos, para poder eliminar registros sin restricciones.
-
Actualizadas las traducciones y la versión

--- a/Translation/de_DE.json
+++ b/Translation/de_DE.json
@@ -1,5 +1,5 @@
 {
-    "text-group": "Grupo del Texto",
-    "text-groups": "Grupos de Texto",
-    "text-name": "Nombre del Texto"
+    "text-group": "Textgruppe",
+    "text-groups": "Textgruppen",
+    "text-name": "Textname"
 }
