--- a/Translation/fr_FR.json
+++ b/Translation/fr_FR.json
@@ -1,5 +1,5 @@
 {
-    "text-group": "Grupo del Texto",
-    "text-groups": "Grupos de Texto",
-    "text-name": "Nombre del Texto"
+    "text-group": "Groupe de texte",
+    "text-groups": "Groupes de texte",
+    "text-name": "Nom du texte"
 }
