--- a/Translation/it_IT.json
+++ b/Translation/it_IT.json
@@ -1,5 +1,5 @@
 {
-    "text-group": "Grupo del Texto",
-    "text-groups": "Grupos de Texto",
-    "text-name": "Nombre del Texto"
+    "text-group": "Gruppo testo",
+    "text-groups": "Gruppi di testo",
+    "text-name": "Nome del testo"
 }
