--- a/Translation/pl_PL.json
+++ b/Translation/pl_PL.json
@@ -1,5 +1,5 @@
 {
-    "text-group": "Grupo del Texto",
-    "text-groups": "Grupos de Texto",
-    "text-name": "Nombre del Texto"
+    "text-group": "Grupa tekstu",
+    "text-groups": "Grupy tekstowe",
+    "text-name": "Nazwa tekstu"
 }
