--- a/Translation/pt_BR.json
+++ b/Translation/pt_BR.json
@@ -1,5 +1,5 @@
 {
-    "text-group": "Grupo del Texto",
-    "text-groups": "Grupos de Texto",
-    "text-name": "Nombre del Texto"
+    "text-group": "Grupo de Texto",
+    "text-groups": "Grupos de texto",
+    "text-name": "Nome do Texto"
 }
