--- a/Translation/va_ES.json
+++ b/Translation/va_ES.json
@@ -1,5 +1,5 @@
 {
-    "text-group": "Grupo del Texto",
-    "text-groups": "Grupos de Texto",
-    "text-name": "Nombre del Texto"
+    "text-group": "Grup del Text",
+    "text-groups": "Grups de Text",
+    "text-name": "Nom del Text"
 }
